--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ div { position: absolute; }
 	width: 1380px;
 	height: 273px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 90px;
 	text-align: center;
 	line-height: 90px;
@@ -58,7 +58,7 @@ div { position: absolute; }
 	width: 1380px;
 	height: 134px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	line-height: 60px;
@@ -72,7 +72,7 @@ div { position: absolute; }
 	width: 1380px;
 	height: 134px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	line-height: 60px;
@@ -86,7 +86,7 @@ div { position: absolute; }
 	width: 1380px;
 	height: 134px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	line-height: 60px;
@@ -100,7 +100,7 @@ div { position: absolute; }
 	width: 1380px;
 	height: 104px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 30px;
 	text-align: center;
 	line-height: 30px;
@@ -129,7 +129,7 @@ div { position: absolute; }
 	left: 167px;
 	width: 145px;
 	height: 71px;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	color:#72ae95;
@@ -157,7 +157,7 @@ div { position: absolute; }
 	left: 167px;
 	width: 145px;
 	height: 71px;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	color:#72ae95;
@@ -170,7 +170,7 @@ div { position: absolute; }
 	width: 1541.2177734375px;
 	height: 134px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	line-height: 60px;
@@ -199,7 +199,7 @@ div { position: absolute; }
 	left: 167px;
 	width: 145px;
 	height: 71px;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	color:#72ae95;
@@ -244,7 +244,7 @@ div { position: absolute; }
 	width: 1322px;
 	height: 89px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 40px;
 	text-align: left;
 	line-height: 40px;
@@ -258,7 +258,7 @@ div { position: absolute; }
 	width: 1464px;
 	height: 89px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 40px;
 	text-align: left;
 	line-height: 40px;
@@ -272,7 +272,7 @@ div { position: absolute; }
 	width: 1436px;
 	height: 89px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 40px;
 	text-align: left;
 	line-height: 40px;
@@ -286,7 +286,7 @@ div { position: absolute; }
 	width: 1380px;
 	height: 89px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 40px;
 	text-align: left;
 	line-height: 40px;
@@ -315,7 +315,7 @@ div { position: absolute; }
 	left: 167px;
 	width: 145px;
 	height: 71px;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	color:#72ae95;
@@ -328,7 +328,7 @@ div { position: absolute; }
 	width: 1553.2177734375px;
 	height: 134px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	line-height: 60px;
@@ -342,7 +342,7 @@ div { position: absolute; }
 	width: 1541.2177734375px;
 	height: 134px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	line-height: 60px;
@@ -356,7 +356,7 @@ div { position: absolute; }
 	width: 1541.2177734375px;
 	height: 134px;
 	overflow: hidden;
-	font-family: VCR OSD Mono;
+	font-family: VCROSDMono;
 	font-size: 60px;
 	text-align: center;
 	line-height: 60px;
